bugfixes on safari

--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -34,7 +34,7 @@
             @media (min-width: $screen-desktop) {
                 display: block;
                 width: 730px;
-                height: auto;
+                height: calc(730px / 1.2);
                 object-fit: cover;
                 object-position: center;
                 transform: rotate(-0.4deg);
