--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -127,9 +127,10 @@
                 }
     
                 > a {
-                display: inline-block;
-                padding: 60px 20px 20px;
-                border-radius: 0 0 5px 5px;
+                    display: inline-block;
+                    padding: 60px 20px 20px;
+                    border-radius: 0 0 5px 5px;
+                    margin: 0;
     
                     &:hover {
                         background-color: $red;
